--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chromedriver": "^120.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -18,7 +19,8 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "selenium-webdriver": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
