--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "selenium-webdriver": "^4.16.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   }
 }
