--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test":"set NODE_OPTIONS=--experimental-vm-modules && npx jest"
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && npx jest"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pngjs": "^7.0.0",
     "selenium-webdriver": "^4.16.0"
   },
   "devDependencies": {
